fixed msg alignment and playlist errors along with styling changes

--- a/src/app/lobby/view-lobby/view-lobby.page.scss
+++ b/src/app/lobby/view-lobby/view-lobby.page.scss
@@ -5,7 +5,9 @@
   margin-bottom: 4px;
   white-space: pre-wrap;
 }
-
+ion-row{
+  align-items: end;
+}
 ion-content {
   //--background: url('../img/musiclobby.png');
   --ion-background-color: #7C7287;
@@ -36,7 +38,7 @@ ion-footer {
 ion-grid{
   width: 100%;
   height: 100px;
-  vertical-align: 40%;
+  vertical-align: 10%;
 }
 .second-grid {
   align-items: flex-end;
@@ -96,3 +98,23 @@ ion-list {
     display: none;
   }
 }
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 40%;
+  height: 100%;
+}
+.your-class {
+  position: relative;
+  left: 10%;
+  right: 10%;
+
+}
+.prevIcon
+{
+  color: rgb(71, 67, 67);
+}
+
